[package]
authors = ["Band Protocol <connect@bandprotocol.com>"]
description = "Price feed contract store price data from BandChain"
edition = "2021"
name = "price-feed"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.15.1
"""

[dependencies]
cosmwasm-schema = "2.0.2"
cosmwasm-std = "2.0.2"
cw-band = {path = "../../packages/cw-band", version = "0.2.0"}
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
obi = "0.0.2"
serde = {version = "1.0.192", default-features = false, features = ["derive"]}
thiserror = "1.0.59"

[dev-dependencies]
cosmwasm-schema = "2.0.2"
cw-multi-test = "2.0.1"
schemars = "0.8.1"
