[package]
name = "tunnel-consumer-ibc"
version = "0.1.0"
authors = ["Band Protocol <connect@bandprotocol.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.4", features = ["stargate"] }
cw-band = { path = "../../packages/cw-band", version = "0.3.0", features = ["tunnel"] }
cw-controllers = "2.0.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
thiserror = { version = "2.0.3" }
